@@ -2,6 +2,8 @@ FROM maven:3.8.4-openjdk-17-slim AS build
 
 WORKDIR /app
 COPY . .
+# Add MAVEN_OPTS to fix Lombok compilation
+ENV MAVEN_OPTS="--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
 RUN mvn clean package -DskipTests
 
 FROM openjdk:17-slim
@@ -15,5 +17,6 @@ ENV SPRING_PROFILES_ACTIVE=prod
 ENV SPRING_DATASOURCE_URL=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 ENV SPRING_DATASOURCE_USERNAME=${DB_USER}
 ENV SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
